--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -25,7 +25,7 @@
 .cover {
     background-color: white;
     width: 70%;
-    height: 50%;
+    height: 70%;
     position: relative;
     border-radius: 1em;
     box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
@@ -40,10 +40,11 @@
     border: none;
     background-color: rgb(229, 226, 226);
     width: 80%;
-    border-radius: 0.25em;
+    height: 30px;
+    /* border-radius: 0.25em; */
     text-align: center;
-    padding: 2em;
-    font-size: 0.75em;
+    /* padding: 2em; */
+    /* font-size: 0.75em; */
 }
 
 input:focus {
@@ -79,7 +80,7 @@ input:focus {
 
     .cover {
         width: 60%;
-        height: 70%;
+        height: 80%;
     }
 }
 
@@ -91,6 +92,6 @@ input:focus {
 
     .cover {
         width: 25%;
-        height: 65%;
+        height: 80%;
     }
 }
