--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: lightblue;
-      /* background-color: gray; */
+      /* background-color: lightgreen; */
   }
   
 .question{
