--- a/frontend/src/css/mainPage.css
+++ b/frontend/src/css/mainPage.css
@@ -1,3 +1,9 @@
+body {
+    background-color: lightblue;
+      /* background-color: lightgreen; */
+  }
+  
+
 .mainPage{
-    height: 1000px;
+    /* height: 1000px; */
 }
