--- a/frontend/src/css/tab.css
+++ b/frontend/src/css/tab.css
@@ -19,6 +19,14 @@
     
   }
   
+  #getTypeBtn{
+    margin-top: 5vh;
+    width: 50vw;
+    height: 40px;
+    border-radius: 20px;
+    max-width: 300px;
+
+  }
   .tabMenu {
     display: flex;
     /* flex-direction: column; */
@@ -73,10 +81,12 @@
     width: 100%;
     height: 100%;
     display: none;
+    /* text-align: center; */
   }
   
   .activeTabcontent {
     display: block;
+    text-align: center;
   }
   
   
