--- a/frontend/src/css/typeTestQn.css
+++ b/frontend/src/css/typeTestQn.css
@@ -1,7 +1,5 @@
 
-.question{
-    text-align: center;
-}
+
 
 .form {
     background-color: #fff;
@@ -18,8 +16,13 @@
     border-radius: 25px;
 }
 
-.fieldset{
-    border-radius: 25px;
+.qn{
+    text-align: center;
+}
+
+.consentLabel{
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
 
 .formButton
@@ -29,7 +32,7 @@
         margin-bottom: 8px;
         margin-left: 5px;
         font-size: 1em;
-        border-radius: 1px;
+        border-radius: 10px;
         
 }
 
