--- a/frontend/src/css/contact.css
+++ b/frontend/src/css/contact.css
@@ -16,6 +16,6 @@
     display: block;
   margin-left: auto;
   margin-right: auto;
-  background-color: aliceblue;
+  /* background-color: aliceblue; */
   }
 
