--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -1,98 +1,88 @@
-/* * {
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "CustomFont";
-} */
-
-
 /* --------------------------- MOBILE VERSION ------------------------------ */
-.page {
-    height: 100vh;
-    /* height: 100%; */
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: aliceblue; */
-}
 
-#genderSignup{
-    display: flex;
-    font-size: 0.8em;
-}
+    .page {
+        height: 100vh;
+        /* height: 100%; */
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* background-color: aliceblue; */
+    }
 
-.genderRadio{
-    /* margin: 10px; */
-}
-.signupCover {
-    background-color: white;
-    width: 70%;
-    /* height: 100vh; */
-    height: 90%;
-    max-height: 400px;
-    position: relative;
-    border-radius: 1em;
-    box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    font-size: 1.5em;
-}
+    #genderSignup {
+        display: flex;
+        font-size: 0.8em;
+    }
 
-.loginCover {
-    background-color: white;
-    width: 70%;
-    /* height: 100vh; */
-    height: 90%;
-    max-height: 470px;
-    position: relative;
-    border-radius: 1em;
-    box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    font-size: 1.5em;
-}
+    .genderRadio {
+        /* margin: 10px; */
+    }
 
+    .signupCover {
+        background-color: white;
+        width: 70%;
+        /* height: 100vh; */
+        height: 90%;
+        max-height: 400px;
+        position: relative;
+        border-radius: 1em;
+        box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        font-size: 1.5em;
+    }
 
-.loginInput {
-    border: 1px solid lightslategray;
-    width: 80%;
-    height: 6vh;
-    border-radius: 0.5em;
-    text-align: center;
-    /* padding: 2em; */
-    font-size: 0.75em;
-}
-
-input:focus {
-    outline-color: rgb(32, 177, 255);
-}
-
-.login-btn {
-    width: 70%;
-    height: 4vh;
-    background-color: rgb(32, 177, 255);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.5s;
-    border-radius: 0.5em;
-    cursor: pointer;
-}
-
-.login-btn:hover { transform: scale(1.25);}
-
-/* .text {
-    position: relative;
-    bottom: 0.5%;
-} */
+    .loginCover {
+        background-color: white;
+        width: 70%;
+        /* height: 100vh; */
+        height: 90%;
+        max-height: 470px;
+        position: relative;
+        border-radius: 1em;
+        box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        font-size: 1.5em;
+    }
 
 
+    .loginInput {
+        border: 1px solid lightslategray;
+        width: 80%;
+        height: 6vh;
+        border-radius: 0.5em;
+        text-align: center;
+        /* padding: 2em; */
+        font-size: 0.75em;
+    }
 
-/* -------------------- TABLET OPTIMIZATION -------------------- */
+    input:focus {
+        outline-color: rgb(32, 177, 255);
+    }
+
+    .login-btn {
+        width: 70%;
+        height: 4vh;
+        background-color: rgb(32, 177, 255);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 0.5s;
+        border-radius: 0.5em;
+        cursor: pointer;
+    }
+
+    .login-btn:hover {
+        transform: scale(1.25);
+    }
+
+
 @media only screen and (min-device-width: 37em) {
     .page {
         font-size: 0.8em;
@@ -109,7 +99,6 @@ input:focus {
     }
 }
 
-/* -------------------- DESKTOP OPTIMIZATION -------------------- */
 @media only screen and (min-device-width: 64em) {
     .page {
         font-size: 0.7em;
@@ -124,4 +113,5 @@ input:focus {
         width: 25%;
         height: 60%;
     }
-}
+} 
+ 
