--- a/frontend/src/css/typeTestQn.css
+++ b/frontend/src/css/typeTestQn.css
@@ -1,38 +1,108 @@
-
-
-
 .form {
     background-color: #fff;
     /* background-color: lightcoral; */
-    width:100%;
+    width: 100%;
     margin: auto;
     margin-top: 50px;
-      padding-top: 15px;
-      padding-right: 15px;
-      padding-bottom: 15px;
-      padding-left: 15px;
+    padding-top: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;
     box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.5);
     text-align: left;
     border-radius: 25px;
 }
 
-.qn{
+.qn {
     text-align: center;
 }
 
-.consentLabel{
+/* .consentLabel {
     margin-left: 2vw;
     margin-right: 2vw;
+} */
+
+.formButton {
+    margin-top: 8px;
+    margin-right: 5px;
+    margin-bottom: 8px;
+    margin-left: 5px;
+    font-size: 1em;
+    border-radius: 10px;
+
 }
 
-.formButton
-{
-        margin-top: 8px;
-        margin-right: 5px;
-        margin-bottom: 8px;
-        margin-left: 5px;
-        font-size: 1em;
-        border-radius: 10px;
-        
+@media (max-width: 600px) {
+
+    input[type=checkbox] {
+       /* margin-left: 7px;
+       margin-right: 7px;
+       margin-top: 10px; */
+
+       margin-left: 2vw;
+       margin-right: 2vw;
+       margin-top: 2vw;
+       margin-bottom: 1vw;
+    }
+
+    .consentLabel {
+        /* margin-left: 2px;
+        margin-right: 2px; */
+
+        margin-left: 1vw;
+        margin-right: 1vw;
+        color: purple
+    }
+
 }
 
+
+@media (min-width: 601px) and (max-width: 991px) {
+
+    input[type=checkbox] {
+        margin-left: 1vw;
+        margin-right: 1vw;
+        margin-top: 3vh;
+        margin-bottom: 3vh;
+        width: 20px; 
+        height: 20px; 
+        /* transform : scale(1.5); */
+        /* zoom: 1.5; */
+    }
+
+    .consentLabel {
+        /* margin-left: 2px;
+        margin-right: 2px; */
+
+        margin-left: 1vw;
+        margin-right: 1vw;
+        font-size: 1.1em;
+        color: purple
+    }
+}
+
+
+@media only screen and (min-width: 992px) {
+
+    input[type=checkbox] {
+        margin-left: 1vw;
+        margin-right: 1vw;
+        margin-top: 3vh;
+        margin-bottom: 3vh;
+        width: 30px; 
+        height: 30px; 
+        /* transform : scale(1.5); */
+        /* zoom: 1.5; */
+    }
+
+    .consentLabel {
+        /* margin-left: 2px;
+        margin-right: 2px; */
+
+        margin-left: 1vw;
+        margin-right: 1vw;
+        font-size: 1.2em;
+        color: purple
+    }
+
+}
