--- a/frontend/src/css/auth.css
+++ b/frontend/src/css/auth.css
@@ -1,6 +1,7 @@
 #reqAuth{
     justify-content: center;
     display: flex;
+    width: 100%;
 }
 
 #reqAuthInput{
@@ -10,50 +11,75 @@
     height: 6vh;
     border-radius: 0.5em;
     /* padding: 2em; */
-    font-size: 0.6em;
     text-align: center;
+    font-size: large;
 }
 
 #reqAutBtn{
-    border: 1px solid lightslategray;
-    border-radius: 0.5em;
 }
 
-.authCover {
-    background-color: white;
-    width: 70%;
-    /* height: 100vh; */
-    height: 90%;
-    max-height: 300px;
-    position: relative;
-    border-radius: 1em;
-    box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    font-size: 1.5em;
-}
 
+
+@media (max-width: 600px) {
+    .authCover {
+        background-color: white;
+        width: 70%;
+        /* height: 100vh; */
+        height: 55%;
+        position: relative;
+        border-radius: 1em;
+        box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        font-size: 1.5em;
+    }
+    
+}
 
 /* -------------------- TABLET OPTIMIZATION -------------------- */
-@media only screen and (min-device-width: 37em) {
+@media (min-width: 601px) and (max-width: 991px) {
    
     .authCover {
-        width: 30%;
-        height: 65%;
+        background-color: white;
+        width: 50%;
+        /* height: 100vh; */
+        height: 50%;
+        position: relative;
+        border-radius: 1em;
+        box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        font-size: 1.5em;
     }
-
+    
     
 }
 
 /* -------------------- DESKTOP OPTIMIZATION -------------------- */
-@media only screen and (min-device-width: 64em) {
-   
+@media only screen and (min-width: 992px) {
+
     .authCover {
-        width: 25%;
+        background-color: white;
+        width: 30%;
+        max-width: 500px;
+        /* height: 100vh; */
         height: 60%;
+        max-height: 500px;
+        position: relative;
+        border-radius: 1em;
+        box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        font-size: 1.5em;
+
     }
+    
 
   
 }
