--- a/frontend/src/css/typeResult.css
+++ b/frontend/src/css/typeResult.css
@@ -1,30 +1,66 @@
+#wholeTypeResult {
+  /* background-color: beige; */
+}
 
-#wholeTypeResult{
-   /* background-color: beige; */
-  }
+mark {
+  background-color: lightblue;
+  color: rgb(212, 0, 255);
+}
 
-  mark { 
-    background-color: lightblue;
-    color: rgb(212, 0, 255);
-  }
-
-#typeResultH1{
+#typeResultH1 {
   text-align: center;
   margin-top: 40px;
   /* margin-bottom: 30px; */
 }
 
-#typeResultDiscription{
-  width: 90%;
-  max-width: 500px;
-  /* margin-top: 30px; */
-  /* border-radius: 15px; */
-  display: block;
-margin-left: auto;
-margin-right: auto;
-}
 
-.type{
+.type {
   margin-top: 50px;
   /* margin-bottom: 25px; */
+}
+
+
+
+@media (max-width: 600px) {
+
+  #typeResultDiscription {
+    width: 90%;
+    /* margin-top: 30px; */
+    /* border-radius: 15px; */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+
+/* -------------------- TABLET OPTIMIZATION -------------------- */
+@media (min-width: 601px) and (max-width: 991px) {
+
+  #typeResultDiscription {
+    width: 85%;
+    /* margin-top: 30px; */
+    /* border-radius: 15px; */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 1.1em;
+  }
+}
+
+
+/* -------------------- DESKTOP OPTIMIZATION -------------------- */
+@media only screen and (min-width: 992px) {
+
+  #typeResultDiscription {
+    width: 50%;
+    max-width: 1000px;
+    /* margin-top: 30px; */
+    /* border-radius: 15px; */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 1.3em;
+    /* background-color: white; */
+  }
 }
