--- a/frontend/src/css/typeTestQn.css
+++ b/frontend/src/css/typeTestQn.css
@@ -13,14 +13,6 @@
     border-radius: 25px;
 }
 
-.qn {
-    text-align: center;
-}
-
-/* .consentLabel {
-    margin-left: 2vw;
-    margin-right: 2vw;
-} */
 
 .formButton {
     margin-top: 8px;
@@ -54,6 +46,12 @@
         color: purple
     }
 
+    
+.qn {
+    text-align: center;
+    /* font-size: 1.3em; */
+    }
+
 }
 
 
@@ -76,33 +74,48 @@
 
         margin-left: 1vw;
         margin-right: 1vw;
-        font-size: 1.1em;
+        /* font-size: 1.1em; */
         color: purple
     }
+
+    .qn {
+        text-align: center;
+        font-size: 1.1em;
+        }
 }
 
 
 @media only screen and (min-width: 992px) {
 
     input[type=checkbox] {
-        margin-left: 1vw;
-        margin-right: 1vw;
+        /* margin-left: 1vw;
+        margin-right: 1vw; */
+        margin-left: 15px;
+        margin-right: 15px;
         margin-top: 3vh;
         margin-bottom: 3vh;
         width: 30px; 
         height: 30px; 
+        
         /* transform : scale(1.5); */
         /* zoom: 1.5; */
     }
 
     .consentLabel {
-        /* margin-left: 2px;
-        margin-right: 2px; */
+        margin-left: 15px;
+        margin-right: 15px;
 
-        margin-left: 1vw;
-        margin-right: 1vw;
-        font-size: 1.2em;
+        /* margin-left: 1vw;
+        margin-right: 1vw; 
+         */
+        
+         /* font-size: 1.2em; */
         color: purple
     }
+
+    .qn {
+        text-align: center;
+        font-size: 1.4em;
+        }
 
 }
